# huntwords

./: .gitignore  LICENSE  README.md  build.sh  compose.yml  create_venv  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
.devcontainer/: devcontainer.json  vsc-install-pnpm.sh
.uvextras/: uvextras.yaml
api/: Containerfile  Dockerfile  __main__.py  huntwords-api.yml  pyproject.toml  requirements.dev.txt  requirements.txt
api/commands/: adapter.py  echo.py  puzzle_updated.py  puzzleboard_consumed.py  puzzleboard_count.py  puzzleboards_clear.py  puzzles.py
api/huntwordsapi/: __main__.py  handler.py  handler_models.py  test_handler_models.py
api/huntwordsapi/commands/: adapter.py  echo.py  puzzle_updated.py  puzzleboard_consumed.py  puzzleboard_count.py  puzzleboard_pop.py  puzzleboards.py  puzzleboards_clear.py  puzzles.py
api/huntwordsapi/models/: command.py  puzzle.py  puzzleboard.py  redis.py  repo.py  test_handler_models.py  test_puzzle.py  test_puzzleboard.py  test_wordsolution.py
api/manage/: __main__.py  cli.py  commands_puzzle.py  commands_puzzleboard.py  post_api_request.py
api/models/: puzzle.py  puzzleboard.py  test_handler_models.py  test_puzzle.py  test_puzzleboard.py  test_puzzleboard_funcs.py  test_wordsolution.py
api/puzzleboard-consumed/: puzzleboard_consumed.py
etc/: convert_puzzles.py  load_puzzles.sh  pboards.sh  puzzles-all.json  refresh_puzzleboards.sh  wrap_for_compose.sh
etc/nginx/: default.conf
faas/: build.sh  huntwords-api-1.yml  huntwords-api.yml
faas/huntwordsapi/: handler.py  handler_models.py  puzzle_updated.py  puzzleboard_consumed.py  puzzleboard_pop.py  puzzleboards_clear.py  puzzles.py  test_handler.py  test_handler_models.py
faas/model/: __init__.py  puzzle.py  puzzleboard.py  redis.py  test_puzzle.py  test_puzzleboard.py  test_puzzleboard_funcs.py  test_wordsolution.py
faas/puzzle-updated/: handler.py  puzzle_updated.py
faas/puzzleboard-consumed/: handler.py  puzzleboard_consumed.py
faas/puzzleboard-pop/: handler.py  puzzleboard_pop.py
files/: puzzles-all-orig.json  puzzles-all.json
k8s/: deployment.yml  ingress.yml  namespace.yml
manager/: __main__.py  cli.py  command.py  commands_consume.py  commands_puzzle.py  commands_puzzleboard.py  post_api_request.py
model/: puzzle.py
src/: Containerfile
src/api/commands/: adapter.py  echo.py  puzzle_updated.py  puzzleboard_consumed.py  puzzleboard_pop.py  puzzleboards.py  puzzles.py
src/api/models/: puzzleboard.py  repo.py  test_puzzle.py
src/manage/: __main__.py  cli.py  commands_puzzle.py  commands_puzzleboard.py
ui/: .dockerignore  Containerfile  Dockerfile  README.md  angular.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  proxy.config.json  vite.config.ts
ui/etc/docker-entrypoint.d/: 99-metrics.sh
ui/etc/nginx/: default.conf  nginx.conf
ui/src/: App.tsx  index.css  index.html  styles.scss  toolbar.tsx
ui/src/app/: app-material.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
ui/src/app/game-state/: game-state.component.html  (+3 more)
ui/src/puzzles/: boardcells.tsx  boardsummary.tsx  game.context.tsx  gamesummary.tsx  puzzle.model.ts  puzzleboard.tsx  puzzles.actions.tsx  puzzles.service.ts  puzzles.tsx
(+9 files in other folders)
