[project]
name = "huntwords"
version = "1.0.0"
description = "Huntwords - hunt for words in a grid of letters"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = [
    "docopt>=0.6.2",
    "fastapi>=0.110.1",
    "jmespath>=1.0.1",
    "redis>=5.0.3",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.29.0",
]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "autopep8>=2.1.0",
    "flake8>=7.1.1",
    "mypy>=1.14.1",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.isort]
multi_line_output = 3
