[project]
name = "huntwords-api"
version = "1.0.0"
description = "API for Huntwords"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }

[tool.isort]
multi_line_output = 3
