[project]
name = "huntwords-api"
version = "1.0.0"
description = "API for Huntwords"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.isort]
multi_line_output = 3
